--- a/asciidoc/apoc.adoc
+++ b/asciidoc/apoc.adoc
@@ -1,11 +1,7 @@
 == Neo4j Labs Project: Awesome Procedures On Cypher (APOC)
-:docs: https://neo4j-contrib.github.io/neo4j-apoc-procedures/3.5
-++++
-<style type="text/css">
-li p,td p {  margin-bottom: 0px; }
-h2,h3,h4 {  margin-top: 2rem; }
-</style>
-++++
+:docs: https://neo4j.com/docs/labs/apoc/current
+
+include::header.adoc[]
 
 ====
 APOC is an add-on library for Neo4j that provides hundreds of procedures and functions adding a lot of useful functionality.
@@ -15,11 +11,26 @@ The library covers a lot of things, that's why we provide a link:{docs}/overview
 
 === Availability & Installation
 
-It can be installed with a single click in https://neo4j.com/developer/neo4j-desktop[Neo4j Desktop^], is available in all https://neo4j.com/sandbox[Neo4j Sandboxes^] and in https://neo4j.com/cloud[Neo4j Cloud^].
+It can be installed with a single click in Neo4j Desktop, is available in all Neo4j Sandboxes and in Neo4j Cloud.
 
 Downloading the appropriate release for your Neo4j into the plugins folder adds APOC to any Neo4j installation.
 
-=== Functionality Includes
+You can learn more in the https://neo4j.com/developer/neo4j-apoc/[APOC Developer Guide^].
+
+=== Relevant Links
+
+[cols="1,4"]
+|===
+| icon:user[] Authors | Michael Hunger, lots of internal and external contributors, especially the team from http://larus-ba.it/neo4j/[Larus BA, Italy^] lead by Andrea Santurbano
+| icon:gift[] Releases | https://github.com/neo4j-contrib/neo4j-apoc-procedures/releases
+| icon:github[] Source | https://github.com/neo4j-contrib/neo4j-apoc-procedures
+| icon:book[] Developer Guide | https://neo4j.com/developer/neo4j-apoc/
+| icon:book[] Docs | {docs}
+// | icon:book[] Article | 
+| icon:play-circle[] Example | A `:play apoc` browser guide shows some of the functionality.
+|===
+
+=== Documentation
 
 * {docs}/export-import/[Data Import and Export^]
 * {docs}/database-integration[Integration with other Databases^]
@@ -30,18 +41,6 @@ Downloading the appropriate release for your Neo4j into the plugins folder adds 
 * {docs}/path-finding[Advanced Path Finding Procedures^]
 * {docs}/virtual[Virtual Nodes and Relationships for visualizing aggregation and more^]
 
-=== Relevant Links
-
-[cols="1,4"]
-|===
-| icon:user[] Authors | Michael Hunger, lots of internal and external contributors, especially the team from http://larus-ba.it/neo4j/[Larus BA, Italy^] lead by Andrea Santurbano
-| icon:gift[] Releases | https://github.com/neo4j-contrib/neo4j-apoc-procedures/releases
-| icon:github[] Source | https://github.com/neo4j-contrib/neo4j-apoc-procedures
-| icon:book[] Docs | https://neo4j-contrib.github.io/neo4j-apoc-procedures/3.5/
-// | icon:book[] Article | 
-| icon:play-circle[] Example | A `:play apoc` browser guide shows some of the functionality.
-|===
-
 === Quick Videos
 
 We recorded the https://r.neo4j.com/videos[APOC Video Series^].
@@ -51,6 +50,8 @@ Here are the latest videos.
 <iframe width="320" height="180" src="https://www.youtube.com/embed/V1DTBjetIfk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="320" height="180" src="https://www.youtube.com/embed/x34FuSLt0l8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="320" height="180" src="https://www.youtube.com/embed/HvTvy4G9uJk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="320" height="180" src="https://www.youtube.com/embed/0p4jBOXNgc8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQPqceydXxc6n9ocJgDur4Ri3bGq8RD2r_e-5-cWrti04v8Icrynf8A9H0XZwfsoAKig8cRrXQ-6T96/embed?start=false&loop=false&delayms=3000" frameborder="0" width="320" height="180" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 ++++
 
 === Recent Articles
@@ -59,5 +60,4 @@ Here are the latest videos.
 * https://medium.com/neo4j/streaming-graph-loading-with-neo4j-and-apoc-triggers-188ed4dd40d5[Streaming Graph Loading with Neo4j and APOC Triggers by David Allen^]
 * https://markhneedham.com/blog/tag/apoc/[APOC Articles by Mark Needham^]
 
-image:https://cdn.neo4jlabs.com/images/beaker.png[link=https://neo4j.com/labs/]
-Powered by https://neo4j.com/labs/s[Neo4j Labs^].
+include::footer.adoc[]
