--- a/asciidoc/kafka.adoc
+++ b/asciidoc/kafka.adoc
@@ -12,6 +12,8 @@ Our *Kafka Connect Plugin* offers the sink functionality.
 
 The *Neo4j Server Extension* provides both sink and source, as it has also access to the transaction events.
 It will also add *procedures* you can call to send and receive data from Kafka.
+
+Neo4j Streams has graduated from Neo4j Labs and is now a fully supported component of Neo4j for Enterprise customers.
 ====
 
 === Availability & Installation			
@@ -21,7 +23,8 @@ You can install the Kafka Connect Neo4j Sink Plugin into Confluent Cloud or your
 Alternatively, you can add the Neo4j Server extension to your own installations.
 Just download the matching release version into the plugins folder and configuring it according to the documentation (see below for both).
 
-You can execute and test the integration using our Docker Compose setups.
+Enterprise users may use Neo4j Streams under their existing support agremeents.  Neo4j Community users may also use Neo4j Streams, with
+community support.
 
 image::https://s3.amazonaws.com/dev.assets.neo4j.com/wp-content/uploads/20190604044149/connect-hub-neo4j-sink.png[link="https://www.confluent.io/connector/kafka-connect-neo4j-sink/"]
 
@@ -39,12 +42,13 @@ image::https://s3.amazonaws.com/dev.assets.neo4j.com/wp-content/uploads/20190604
 
 [cols="1,4"]
 |===
-| icon:comments[] Support | https://community.neo4j.com/c/integrations/stream-processing[Neo4j Online Community]
+| icon:gift[] Releases | https://neo4j.com/download-center/#integrations
+| icon:book[] Documentation | https://r.neo4j.com/kafka
+| icon:comments[] Enterprise Customer Support | https://support.neo4j.com/hc/en-us[Customer Support]
+| icon:comments[] Community Support | https://community.neo4j.com/c/integrations/stream-processing[Neo4j Online Community]
 | icon:user[] Authors | Michael Hunger, Andrea Santurbano from our partners http://larus-ba.it/neo4j/[Larus BA, Italy^]
-| icon:gift[] Releases | https://github.com/neo4j-contrib/neo4j-streams/releases
 | icon:github[] Source | https://github.com/neo4j-contrib/neo4j-streams
 | icon:github[] Overview | https://github.com/neo4j-contrib/neo4j-streams/blob/master/readme.adoc
-| icon:book[] Docs | https://r.neo4j.com/kafka
 | icon:medkit[] Issues | https://github.com/neo4j-contrib/neo4j-streams/issues
 
 // | icon:book[] Article | 
