--- a/asciidoc/graph-algorithms.adoc
+++ b/asciidoc/graph-algorithms.adoc
@@ -8,10 +8,10 @@
 :toc-title: Contents
 :toclevels: 1
 :docs: https://neo4j.com/docs/graph-algorithms/current/algorithms
-:img: https://s3.amazonaws.com/dev.assets.neo4j.com/wp-content/uploads
+:imagesdir: https://s3.amazonaws.com/dev.assets.neo4j.com/wp-content/uploads
 
 [#graph-algorithms]
-image:{img}/OReilly-Graph-Algorithms_v2_ol1.jpg[Download your free copy, link="https://neo4j.com/graph-algorithms-book/",role="popup-link",float="right",width="210px", margin-left:"2px"]
+image:OReilly-Graph-Algorithms_v2_ol1.jpg[Download your free copy, link="https://neo4j.com/graph-algorithms-book/",role="popup-link",float="right",width="210px", margin-left:"2px"]
 
 Graph algorithms provide one of the most potent approaches to analyzing connected data because their mathematical calculations are specifically built to operate on relationships.
 They describe steps to be taken to process a graph to discover its general qualities or specific quantities.
@@ -41,7 +41,7 @@ The library contains implementations for the following types of algorithms:
         <div class="card">
             <div class="card-inner">
                 <a href="{docs}/pathfinding/" target="_blank">
-                    <img src="{img}/Pathfinding-Algo-Icon.png" />
+                    <img src="{imagesdir}/Pathfinding-Algo-Icon.png" />
                 </a>
             </div>
 
@@ -53,7 +53,7 @@ The library contains implementations for the following types of algorithms:
         <div class="card">
             <div class="card-inner">
                 <a href="{docs}/community/" target="_blank">
-                    <img src="{img}/Community-Algo-Icon.png" />
+                    <img src="{imagesdir}/Community-Algo-Icon.png" />
                 </a>
             </div>
             <div class="card-below"><a href="{docs}/community/"
@@ -64,7 +64,7 @@ The library contains implementations for the following types of algorithms:
         <div class="card">
             <div class="card-inner">
                 <a href="{docs}/centrality/" target="_blank">
-                    <img src="{img}/Centrality-Algo-Icon.png" />
+                    <img src="{imagesdir}/Centrality-Algo-Icon.png" />
                 </a>
             </div>
 
@@ -76,7 +76,7 @@ The library contains implementations for the following types of algorithms:
         <div class="card">
             <div class="card-inner">
                 <a href="{docs}/similarity/" target="_blank">
-                    <img src="{img}/Similarity-Algo-Icon.png" />
+                    <img src="{imagesdir}/Similarity-Algo-Icon.png" />
                 </a>
             </div>
 
@@ -111,7 +111,7 @@ There are several ways to get started with graph algorithms:
         <div class="card">
             <div class="card-inner">
                 <a href="https://neo4j.com/sandbox-v2/algos-book" target="_blank">
-                    <img src="{img}/np_sandbox-toys_1207953_3A8BBC.png" />
+                    <img src="{imagesdir}/np_sandbox-toys_1207953_3A8BBC.png" />
                 </a>
             </div>
             <div class="card-below"><a href="https://neo4j.com/sandbox-v2/algos-book"
@@ -122,7 +122,7 @@ There are several ways to get started with graph algorithms:
         <div class="card">
             <div class="card-inner">
                 <a href="https://medium.com/neo4j/introducing-neuler-the-graph-algorithms-playground-d81042cfcd56" target="_blank">
-                    <img src="{img}/np_swing_206_C595E4.png" />
+                    <img src="{imagesdir}/np_swing_206_C595E4.png" />
                 </a>
             </div>
 
@@ -135,7 +135,7 @@ There are several ways to get started with graph algorithms:
             <div class="card">
                 <div class="card-inner">
                     <a href="https://neo4j.com/docs/graph-algorithms/current/" target="_blank">
-                        <img src="{img}/np_documentation_365797_77AE53.png" />
+                        <img src="{imagesdir}/np_documentation_365797_77AE53.png" />
                     </a>
                 </div>
 
