--- a/asciidoc/kafka.adoc
+++ b/asciidoc/kafka.adoc
@@ -1,9 +1,9 @@
 = Neo4j Streams Kafka Integration
 :docs: https://neo4j.com/docs/labs/neo4j-streams/current
-:img: https://s3.amazonaws.com/dev.assets.neo4j.com/wp-content/uploads
+:imagesdir: https://s3.amazonaws.com/dev.assets.neo4j.com/wp-content/uploads
 :slug: kafka
 
-image::{img}/neo4j-loves-confluent.png[width=500]
+image::neo4j-loves-confluent.png[width=500]
 
 ====
 Neo4j Streams integrates Neo4j with Apache Kafka event streams, to serve as a source of data, for instance change data (CDC) or a sink to ingest any kind of Kafka event into your graph.
@@ -26,7 +26,7 @@ Just download the matching release version into the plugins folder and configuri
 Enterprise users may use Neo4j Streams under their existing support agremeents.  Neo4j Community users may also use Neo4j Streams, with
 community support.
 
-image::{img}/connect-hub-neo4j-sink.png[link="https://www.confluent.io/connector/kafka-connect-neo4j-sink/"]
+image::connect-hub-neo4j-sink.png[link="https://www.confluent.io/connector/kafka-connect-neo4j-sink/"]
 
 == Functionality Includes
 
@@ -36,7 +36,7 @@ image::{img}/connect-hub-neo4j-sink.png[link="https://www.confluent.io/connector
 * {docs}/#_procedures[Neo4j Plugin: Procedures^]
 * {docs}/#docker[Docker Compose setups^]
 
-image::{img}/kafka-source-flow.png[link={docs}/#_neo4j_streams_producer, width=800]
+image::kafka-source-flow.png[link={docs}/#_neo4j_streams_producer, width=800]
 
 == Relevant Links
 
@@ -55,7 +55,7 @@ image::{img}/kafka-source-flow.png[link={docs}/#_neo4j_streams_producer, width=8
 // | icon:play-circle[] Example | A `:play apoc` browser guide shows some of the functionality.
 |===
 
-image::{img}/kafka-sink-flow.png[link={docs}/#_neo4j_streams_consumer]
+image::kafka-sink-flow.png[link={docs}/#_neo4j_streams_consumer]
 
 == Videos & Tutorials
 
