--- a/asciidoc/nsmtx-rdf.adoc
+++ b/asciidoc/nsmtx-rdf.adoc
@@ -1,14 +1,14 @@
 = NSMNTX - Neo4j RDF & Semantics toolkit
-:img: https://s3.amazonaws.com/dev.assets.neo4j.com/wp-content/uploads
+:imagesdir: https://s3.amazonaws.com/dev.assets.neo4j.com/wp-content/uploads
 :slug: nsmtx-rdf
 
-image::{img}/nsmntx-logo.png[float=right,width=500]
+image::nsmntx-logo.png[float=right,width=500]
 
 NSMNTX is a plugin that enables the **use of RDF in Neo4j**. https://www.w3.org/RDF/[RDF is a W3C standard model] for data interchange. 
 
 You can use it to import existing RDF datasets, build integrations with RDF generating endpoints or easily construct RDF endpoints on Neo4j, and more!
 
-image::{img}/nsmntx-block-diagram.png[float=right,width=200]
+image::nsmntx-block-diagram.png[float=right,width=200]
 
 == Availability & Installation
 
