Update and rename nsmtx-rdf.adoc to neosemantics-rdf.adoc
Updated slug

--- a/asciidoc/neosemantics-rdf.adoc
+++ b/asciidoc/neosemantics-rdf.adoc
@@ -1,6 +1,6 @@
 = NSMNTX - Neo4j RDF & Semantics toolkit
 :imagesdir: https://s3.amazonaws.com/dev.assets.neo4j.com/wp-content/uploads
-:slug: nsmtx-rdf
+:slug: neosemantics-rdf
 
 image::nsmntx-logo.png[float=right,width=500]
 
