--- a/asciidoc/graph-algorithms.adoc
+++ b/asciidoc/graph-algorithms.adoc
@@ -11,7 +11,7 @@
 :imagesdir: https://s3.amazonaws.com/dev.assets.neo4j.com/wp-content/uploads
 :author: Mark Needham
 :category: labs
-:tags: graph algorithms, graph data science, integrations, extensions, machine learning, artificial intelligence
+:tags: graph-algorithms, graph-data-science, integrations, extensions, machine-learning, artificial-intelligence
 :neo4j-versions: 3.4, 3.5
 
 [#graph-algorithms]
