--- a/asciidoc/halin.adoc
+++ b/asciidoc/halin.adoc
@@ -3,7 +3,7 @@
 :slug: halin
 :author: David Allen
 :category: labs
-:tags: monitoring, performance, cluster, integrations, extensions, graph apps
+:tags: monitoring, performance, cluster, integrations, extensions, graph-apps
 :neo4j-versions: 3.5, 4.0
 
 image::https://halin.graphapp.io/img/halin-icon.png[float=right,width=200]
