--- a/asciidoc/kafka.adoc
+++ b/asciidoc/kafka.adoc
@@ -6,6 +6,8 @@
 :category: labs
 :tags: apache-kafka, events, extensions, procedures, data-stream
 :neo4j-versions: 3.5, 4.0
+:excerpt: Neo4j Streams integrates Neo4j with Apache Kafka event streams, to serve as a source of data, for instance change data (CDC) or a sink to ingest any kind of Kafka event into your graph.
+:featured-media: labs_beaker
 
 image::neo4j-loves-confluent.png[width=500]
 
