--- a/asciidoc/neosemantics-rdf.adoc
+++ b/asciidoc/neosemantics-rdf.adoc
@@ -6,13 +6,13 @@
 :tags: rdf, integrations, extensions, data-import, data-export, ontologies
 :neo4j-versions: 3.5, 4.0
 
-image::nsmntx-logo.png[float=right,width=500]
+image::n10s-logo.png[float=right,width=500]
 
 NSMNTX is a plugin that enables the **use of RDF in Neo4j**. https://www.w3.org/RDF/[RDF is a W3C standard model] for data interchange. 
 
 You can use it to import existing RDF datasets, build integrations with RDF generating endpoints or easily construct RDF endpoints on Neo4j, and more!
 
-image::nsmntx-block-diagram.png[float=right,width=200]
+image::n10s-block-diagram.png[float=right,width=200]
 
 == Availability & Installation
 
