--- a/asciidoc/neosemantics-rdf.adoc
+++ b/asciidoc/neosemantics-rdf.adoc
@@ -10,7 +10,7 @@ image::n10s-logo.png[float=right,width=500]
 
 neosemantics (n10s) is a plugin that enables the **use of RDF and its associated vocabularies like (OWL,RDFS,SKOS and others) in Neo4j**. https://www.w3.org/RDF/[RDF is a W3C standard model] for data interchange. 
 
-You can use n10s to easily build integrations with RDF-generating / RDF-consuming components.
+You can use n10s to easily build integrations with RDF-generating / RDF-consuming components. You can also use it to validate your graph against constraints expressed in https://www.w3.org/TR/shacl/[SHACL] or to run basic inferencing.
 
 image::n10s-block-diagram.png[float=right,width=200]
 
